# python-lib

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  exec_calc.py  pyproject.toml  python_build.yml
.github/workflows/: build.yml  publish.yml  python_build.yml
calc/: sum.py
druid_libs/: __init__.py
druid_libs/calc/: sum.py
druid_libs/tests_tools/: __init__.py  fake_context.py  lambda_module.py
druid_libs/tools/: __init__.py  fake_context.py  fake_event.py  lambda_module.py
sum_numbers_lib/calc/: __init__.py
tests/: test_druid_libs.py  test_sum_numbers_lib.py
